chore: apply -Ppre-commit rewrites from the quality-gate run
The orchestrator-tier `verify -Ppre-commit` gate rewrote eight files that
this plan's deliverables did not touch. Committed at operator instruction
after the alternatives (full revert / partial revert) were declined.

Dependency alignment:
- version.lombok 1.18.46 -> 1.18.48 in benchmarking/benchmark-integration-wrk,
  token-sheriff-client and token-sheriff-validation

Formatter rewrites:
- line break after type-use @Nullable on the RefreshRedemption and
  StoredToken record components
- RefreshIdentityScopeSpecIT: explicit imports collapsed to java.util.* and
  org.junit.jupiter.api.Assertions.*
- RedeemedRefreshFailureTest: throws IOException, ClassNotFoundException
  broadened to throws Exception
- RefreshPathCoverageGuardTest: Paths.get -> Path.of, unused Paths import
  removed

Co-Authored-By: plan-marshall <noreply@cuioss.de>